--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   web_socket_channel: ^2.4.0
+  network_info_plus: ^5.0.0
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
